--- a/VideoToSM/VideoToSM/MainWindow.xaml
+++ b/VideoToSM/VideoToSM/MainWindow.xaml
@@ -29,11 +29,11 @@
 
             <Label Grid.Column="0" Grid.Row="0" Content="BPM:" VerticalContentAlignment="Center" />
             <TextBox Name="BPMTextBox" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left"
-                     Width="100" Height="18" TextChanged="BPMTextBox_TextChanged" />
+                     Width="100" Height="18" FontSize="10" TextChanged="BPMTextBox_TextChanged" />
 
             <Label Grid.Column="0" Grid.Row="1" Content="Difficulty:" VerticalContentAlignment="Center" />
             <ComboBox Name="DifficultyTypeComboBox" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left"
-                      Width="100" Height="18" SelectionChanged="DifficultyTypeComboBox_SelectionChanged" />
+                      Width="100" Height="18" FontSize="10" SelectionChanged="DifficultyTypeComboBox_SelectionChanged" />
             
             <Label Grid.Column="0" Grid.Row="2" Content="Read left side:" VerticalContentAlignment="Center" />
             <CheckBox Name="ReadLeftSideCheckBox" Grid.Column="1" Grid.Row="2" VerticalContentAlignment="Center"
