--- a/VideoToSM/VideoToSM/MainWindow.xaml
+++ b/VideoToSM/VideoToSM/MainWindow.xaml
@@ -34,6 +34,8 @@
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
+                    <RowDefinition Height="25" />
+                    <RowDefinition Height="25" />
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Grid.Row="0" Content="Video:" VerticalContentAlignment="Center" />
@@ -48,14 +50,39 @@
 
                     <Button Name="BrowseVideoButton" Grid.Column="0" Grid.Row="0" Content="Browse"
                             Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
-                            Click="BrowseVideoButton_Click" />
+                            Click="BrowseVideoButton_Click" AllowDrop="True" Drop="BrowseVideoButton_Drop" />
                     <TextBox Name="VideoPathTextBox" Grid.Column="1" Grid.Row="0"
                              TextWrapping="WrapWithOverflow" FontSize="8" />
                 </Grid>
 
-                <Label Grid.Column="0" Grid.Row="1" Content="Start time:" VerticalContentAlignment="Center" />
+                <Label Grid.Column="0" Grid.Row="1" Content="Video:" VerticalContentAlignment="Center" />
+                <Grid Grid.Column="1" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="60" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-                <Label Grid.Column="0" Grid.Row="2" Content="End time:" VerticalContentAlignment="Center" />
+                    <Button Name="BrowseAudioButton" Grid.Column="0" Grid.Row="0" Content="Browse"
+                            Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
+                            Click="BrowseAudioButton_Click" AllowDrop="True" Drop="BrowseAudioButton_Drop" />
+                    <TextBox Name="AudioPathTextBox" Grid.Column="1" Grid.Row="0"
+                             TextWrapping="WrapWithOverflow" FontSize="8" />
+                </Grid>
+
+                <Label Grid.Column="0" Grid.Row="2" Content="Start time:" VerticalContentAlignment="Center" />
+                <TextBox Name="StartTimeTextBox" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"
+                         Width="100" Height="18" FontSize="10" Text="01:00" />
+
+                <Label Grid.Column="0" Grid.Row="3" Content="End time:" VerticalContentAlignment="Center" />
+                <TextBox Name="EndTimeTextBox" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"
+                         Width="100" Height="18" FontSize="10" Text="01:30" />
+
+                <Button Name="CutVideoButton" Grid.Column="1" Grid.Row="4" Content="Cut"
+                        Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
+                        Click="CutVideoButton_Click" />
             </Grid>
         </Grid>
 
