--- a/VideoToSM/VideoToSM/MainWindow.xaml
+++ b/VideoToSM/VideoToSM/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="5" />
-            <RowDefinition Height="3*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Column="0" Grid.Row="0">
@@ -36,6 +36,7 @@
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
+                    <RowDefinition Height="25" />
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Grid.Row="0" Content="Video:" VerticalContentAlignment="Center" />
@@ -52,19 +53,24 @@
                             Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
                             Click="BrowseVideoButton_Click" AllowDrop="True" Drop="BrowseVideoButton_Drop" />
                     <TextBox Name="VideoPathTextBox" Grid.Column="1" Grid.Row="0"
-                             TextWrapping="WrapWithOverflow" FontSize="8" />
+                             TextWrapping="WrapWithOverflow" FontSize="8"
+                             Text="E:\Media\Downloads\test\[StepManiaX]  Emea (HARD+⧸WILD) [BQTPMLRe7fk].f298.mp4" />
                 </Grid>
 
                 <Label Grid.Column="0" Grid.Row="1" Content="Video times:" VerticalContentAlignment="Center" />
                 <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
                     <TextBox Name="VideoStartTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="00:00.0" />
+                             FontSize="10" Text="00:12.0" />
                     <TextBox Name="VideoEndTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="01:00.0" Margin="10,0,0,0" />
+                             FontSize="10" Text="01:42.0" Margin="10,0,0,0" />
                 </StackPanel>
 
-                <Label Grid.Column="0" Grid.Row="2" Content="Audio:" VerticalContentAlignment="Center" />
-                <Grid Grid.Column="1" Grid.Row="2">
+                <Button Name="CutVideoButton" Grid.Column="1" Grid.Row="2" Content="Cut"
+                        Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
+                        Click="CutVideoButton_Click" />
+
+                <Label Grid.Column="0" Grid.Row="3" Content="Audio:" VerticalContentAlignment="Center" />
+                <Grid Grid.Column="1" Grid.Row="3">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="60" />
                         <ColumnDefinition Width="*" />
@@ -77,20 +83,21 @@
                             Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
                             Click="BrowseAudioButton_Click" AllowDrop="True" Drop="BrowseAudioButton_Drop" />
                     <TextBox Name="AudioPathTextBox" Grid.Column="1" Grid.Row="0"
-                             TextWrapping="WrapWithOverflow" FontSize="8" />
+                             TextWrapping="WrapWithOverflow" FontSize="8"
+                             Text="E:\Media\Downloads\test\[StepManiaX]  Emea (HARD+⧸WILD) [BQTPMLRe7fk].f251.webm" />
                 </Grid>
 
-                <Label Grid.Column="0" Grid.Row="3" Content="Audio times:" VerticalContentAlignment="Center" />
-                <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal">
+                <Label Grid.Column="0" Grid.Row="4" Content="Audio times:" VerticalContentAlignment="Center" />
+                <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
                     <TextBox Name="AudioStartTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="00:00.0" />
+                             FontSize="10" Text="00:08.0" />
                     <TextBox Name="AudioEndTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="01:00.0" Margin="10,0,0,0" />
+                             FontSize="10" Text="01:43.0" Margin="10,0,0,0" />
                 </StackPanel>
 
-                <Button Name="CutVideoButton" Grid.Column="1" Grid.Row="4" Content="Cut"
+                <Button Name="CutAudioButton" Grid.Column="1" Grid.Row="5" Content="Cut"
                         Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
-                        Click="CutVideoButton_Click" />
+                        Click="CutAudioButton_Click" />
             </Grid>
         </Grid>
 
@@ -103,7 +110,7 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
-                <RowDefinition Height="2*" />
+                <RowDefinition Height="3*" />
             </Grid.RowDefinitions>
 
             <Grid Grid.Column="0" Grid.Row="0" Margin="20">
