Comment video cutting test data

--- a/VideoToSM/VideoToSM/MainWindow.xaml
+++ b/VideoToSM/VideoToSM/MainWindow.xaml
@@ -53,16 +53,18 @@
                             Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
                             Click="BrowseVideoButton_Click" AllowDrop="True" Drop="BrowseVideoButton_Drop" />
                     <TextBox Name="VideoPathTextBox" Grid.Column="1" Grid.Row="0"
-                             TextWrapping="WrapWithOverflow" FontSize="8"
-                             Text="E:\Media\Downloads\test\[StepManiaX]  Emea (HARD+⧸WILD) [BQTPMLRe7fk].f298.mp4" />
+                             TextWrapping="WrapWithOverflow" FontSize="8" />
+                             <!--Text="E:\Media\Downloads\test\[StepManiaX]  Emea (HARD+⧸WILD) [BQTPMLRe7fk].f298.mp4" />-->
                 </Grid>
 
                 <Label Grid.Column="0" Grid.Row="1" Content="Video times:" VerticalContentAlignment="Center" />
                 <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
                     <TextBox Name="VideoStartTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="00:12.0" />
+                             FontSize="10" />
+                             <!--Text="00:12.0" />-->
                     <TextBox Name="VideoEndTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="01:42.0" Margin="10,0,0,0" />
+                             FontSize="10" Margin="10,0,0,0" />
+                             <!--Text="01:42.0" />-->
                 </StackPanel>
 
                 <Button Name="CutVideoButton" Grid.Column="1" Grid.Row="2" Content="Cut"
@@ -83,16 +85,18 @@
                             Height="18" FontSize="10" Width="50" HorizontalAlignment="Left"
                             Click="BrowseAudioButton_Click" AllowDrop="True" Drop="BrowseAudioButton_Drop" />
                     <TextBox Name="AudioPathTextBox" Grid.Column="1" Grid.Row="0"
-                             TextWrapping="WrapWithOverflow" FontSize="8"
-                             Text="E:\Media\Downloads\test\[StepManiaX]  Emea (HARD+⧸WILD) [BQTPMLRe7fk].f251.webm" />
+                             TextWrapping="WrapWithOverflow" FontSize="8" />
+                             <!--Text="E:\Media\Downloads\test\[StepManiaX]  Emea (HARD+⧸WILD) [BQTPMLRe7fk].f251.webm" />-->
                 </Grid>
 
                 <Label Grid.Column="0" Grid.Row="4" Content="Audio times:" VerticalContentAlignment="Center" />
                 <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
                     <TextBox Name="AudioStartTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="00:08.0" />
+                             FontSize="10" />
+                             <!--Text="00:08.0" />-->
                     <TextBox Name="AudioEndTimeTextBox" HorizontalAlignment="Left" Width="100" Height="18"
-                             FontSize="10" Text="01:43.0" Margin="10,0,0,0" />
+                             FontSize="10" Margin="10,0,0,0" />
+                             <!--Text="01:43.0" />-->
                 </StackPanel>
 
                 <Button Name="CutAudioButton" Grid.Column="1" Grid.Row="5" Content="Cut"
@@ -130,11 +134,12 @@
 
                 <Label Grid.Column="0" Grid.Row="1" Content="Difficulty:" VerticalContentAlignment="Center" />
                 <ComboBox Name="DifficultyTypeComboBox" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left"
-                      Width="100" Height="18" FontSize="10" SelectionChanged="DifficultyTypeComboBox_SelectionChanged" />
+                          Width="100" Height="18" FontSize="10"
+                          SelectionChanged="DifficultyTypeComboBox_SelectionChanged" />
 
                 <Label Grid.Column="0" Grid.Row="2" Content="Read left side:" VerticalContentAlignment="Center" />
-                <CheckBox Name="ReadLeftSideCheckBox" Grid.Column="1" Grid.Row="2" VerticalContentAlignment="Center"
-                      IsChecked="True" />
+                <CheckBox Name="ReadLeftSideCheckBox" Grid.Column="1" Grid.Row="2"
+                          VerticalContentAlignment="Center" IsChecked="True" />
             </Grid>
 
             <Label Grid.Column="1" Grid.Row="0" Content="Drag &amp; Drop" Margin="20"
